--- a/weather/Info.plist
+++ b/weather/Info.plist
@@ -20,6 +20,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>GooglePlacesAppID</key>
+	<string>AIzaSyBQB2yB4h0_RpHIVQqi_FDpqfP3IwxQDmU</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
